cluster/apps/gitlab/external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-gitlab-iwrite-software
  namespace: gitlab
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitlab.iwrite.software
spec:
  type: ExternalName
  externalName: iwrite.software

---
kind: Service
apiVersion: v1
metadata:
  name: external-registry-iwrite-software
  namespace: gitlab
  annotations:
    external-dns.alpha.kubernetes.io/hostname: registry.iwrite.software
spec:
  type: ExternalName
  externalName: iwrite.software
